# narfblock

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  extra-credits.txt  travis-setup.sh
cmake/: PocoFoundation.CMakeLists.patch  PocoFoundation.Environment_WIN32U.patch  PocoFoundation.FPEnvironment_WIN32.patch  PocoFoundationConfig.cmake  PocoUtil.CMakeLists.patch  PocoUtilConfig.cmake  freetype-gl.CMakeLists.txt  freetype-gl.platform.patch  freetype-gl.win32.patch
cmake/Modules/: DownloadFont.cmake  FindFreetype.cmake  FindGLEW.cmake  FindLibOgg.cmake  FindOpus.cmake  FindOpusFile.cmake  FindPoco.cmake  FindSDL2_image.cmake  Findfreetype-gl.cmake
data/: Who_Likes_to_Party-Kevin_MacLeod-incompetech.opus  client.ini  config.ini  test.yaml
src/: CMakeLists.txt  embed.sh  test.cpp  test.h  test.h.in
src/freetype-gl/: platform.c  platform.h  texture-atlas.cpp  texture-atlas.h  texture-font.c  texture-font.cpp  texture-font.h  vec234.h  vector.h
src/lib/: CMakeLists.txt  Makefile  README.md  bytestream.cpp  embed.cpp  embed.sh  file.cpp  path.cpp  png.cpp  texteditor.cpp
src/lib/include/narf/: path.h  texteditor.h
src/lib/test/: bytestream.cpp  path.cpp
src/narf/: aabb.cpp  aabb.h  block.cpp  block.h  bytestream.cpp  bytestream.h  camera.h  chunk.cpp  chunk.h  chunkcache.h  color.h  console.h  cursesconsole.cpp  cursesconsole.h  embed.cpp  embed.h  entity.cpp  entity.h  file.cpp  file.h  font.cpp  font.h  gameloop.cpp  gameloop.h  ini.cpp  ini.h  input.cpp  input.h  opengl.h  platform.h  playercmd.cpp  playercmd.h  png.cpp  png.h  stdioconsole.cpp  stdioconsole.h  texteditor.cpp  texteditor.h  texture-atlas.cpp  texture-atlas.h  (+10 more)
src/narf/client/: chunk.cpp  chunk.h  console.cpp  console.h  main.cpp  renderer.cpp  renderer.h  winresources.rc  world.cpp  world.h
src/narf/cmd/: cmd.cpp  cmd.h
src/narf/config/: config.cpp  config.h  configfile.cpp  configfile.h  configmanager.cpp  configmanager.h  property.cpp  property.h  variable.cpp  variable.h  yamlmanager.cpp  yamlmanager.h
src/narf/gl/: buffer.h  context.cpp  context.h  ext.cpp  ext.h  gl.h  shader.h  texture.cpp  texture.h  textureatlas.cpp  textureatlas.h
src/narf/lib/: Makefile  file.cpp
src/narf/lib/include/narf/: embed.h
src/narf/math/: angle.h  coord2D.h  coord3D.h  coorditer.h  floats.cpp  floats.h  ints.cpp  ints.h  math.h  matrix.h  orientation.h  plane.h  quaternion.h  ray.h  vector.h
src/narf/math/coord/: distance.cpp  distance.h  point2f.h  point3f.cpp  point3f.h  polarf.h  sphericalf.cpp  sphericalf.h
src/narf/net/: addr.cpp  net.h  protocol.h  server.cpp  server.h  socket.cpp
src/narf/notifications/: ConfigNotification.h
src/narf/server/: main.cpp
src/narf/test/: ini_tests.cpp  main.cpp  quaternions.cpp
src/narf/util/: any.h  path.cpp  path.h  paths.cpp  paths.h  tokenize.cpp  tokenize.h
travis/: setup-linux.sh  setup-osx.sh
